--- a/gallery.html
+++ b/gallery.html
@@ -100,7 +100,7 @@
             
             <figure><!-- Figure Element 11 -->
                 <a href="images/hedgehog.jpg"> <img src="images/hedgehog.jpg" alt="hedgehog"></a>
-                <figcaption class="pic-text">Sonny was just a babt when he was brought to us for rehabilitation.</figcaption>
+                <figcaption class="pic-text">Sonny was just a baby when he was brought to us for rehabilitation.</figcaption>
             </figure>
             
             <figure><!-- Figure Element 12 -->
